<resources>
    <string name="app_name">Petzy</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="no_connection">אין חיבור לאינטרנט אנא נסו שוב</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send">Send</string>
    <string name="lost">Lost</string>
    <string name="found">Found</string>
    <string name="dogs">Dogs</string>
    <string name="cats">Cats</string>
    <string name="other">Other</string>
    <string name="closest">Closest</string>
    <string name="map">Map</string>
    <string name="save">שומר את הפארק...</string>
    <string name="address">כתובת</string>
    <string name="title">כותרת</string>
    <string name="wrong_title">שדה הכותרת הוא חובה.</string>
    <string name="wrong_address">שדה הכתובת הוא חובה.</string>
    <string name="wrong_phone">שדה המס טלפון הוא חובה.</string>
    <string name="wrong_info">שדה תמונות הוא חובה.</string>
    <string name="wrong_subject">אנא בחר קטגוריה בבקשה</string>
    <string name="accept">אישור</string>
    <string name="cancel">ביטול</string>
    <string name="login">אנא התחבר על מנת להמשיך</string>
    <string-array name="titles">
        <item>הוסף פארק</item>
<!--    <item>Lost Found</item>
        <item>Tips</item>
        <item>Parks</item>
        <item>Veterinars</item>-->
    </string-array>

    <string-array name="icons">
        <item>@drawable/ic_action_content_add_circle_outline</item>
    </string-array>
</resources>
