<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
                android:background="#E0E0E0"
              android:padding="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:padding="20dp">

        <EditText
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:hint="@string/title"
                android:id="@+id/title"/>
        <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/title"
                android:layout_marginTop="20dp"
                android:hint="@string/address"
                android:id="@+id/address"/>
        <ImageView
            android:layout_width="270dp"
            android:layout_height="310dp"
            android:layout_marginTop="20dp"
            android:layout_centerInParent="true"
            android:text="@string/accept"
            android:src="@drawable/add_image"
            android:layout_below="@id/address"
            android:id="@+id/image"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/submit"
            android:text="פרסם"
            android:layout_below="@+id/image" />


    </RelativeLayout>
</LinearLayout>